# V2X_Autoparking_GP_SourceCode

./: AppState.qml  Applications.qml  CMakeLists.txt  CustomSliderThreeLevels.qml  CustomSliderTwoLevels.qml  DateTime.qml  FullCircleGauge.qml  GarageIntriorMap.qml  GarageSlotsList.qml  GaugeScreen.qml  HomeScreen.qml  Main.qml  MapToGarage.qml  MusicPlayer.qml  OnSlotParking.qml  README.md  SettingsScreen.qml  VideoScreen.qml  filereading.cpp  filereading.h  main.cpp
Garage Infrastructure ECU/Inc/: CryptoStackManager.h  ESP_Mode_Switch.h  FreeRTOSConfig.h  Ir.h  main.h  mqtt_client.h  stm32f4xx_it.h
Garage Infrastructure ECU/Src/: Ir.c  esp8266.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Garage Infrastructure ECU/cfg/: CryptoStackManager_PBcfg.c  CryptoStackManager_cfg.h  Ir_PBcfg.c  Ir_cfg.h  esp8266_cfg.h  mqtt_client_cfg.h  v2i_messages_ids.h
Main RaspberryPi ECU/CAN Communications/: can_rasp.c  can_rasp.h  can_rasp_PBcfg.c  can_rasp_cfg.h  can_service_manager_rasp.cpp  can_service_manager_rasp.h  can_tp_rasp.c  can_tp_rasp.h  sensors_can_app.cpp  sensors_can_app.h  speed_steering_can_app.cpp  speed_steering_can_app.h
Main RaspberryPi ECU/CARLA Vehicle Simulations/: README.md
Main RaspberryPi ECU/Camera Localization/: CamCal.py  Ped.py  QR.py  test.py
Main RaspberryPi ECU/Crypto Stack/: CryptoStackManager.h  CryptoStackManager_PBcfg.c  CryptoStackManager_cfg.h  SecOC.h
Main RaspberryPi ECU/DIO control/: leds.c  leds.h  leds_PBcfg.c  leds_cfg.h
Main RaspberryPi ECU/Path Planning/: Garage_Map.txt  car.py  dynamic_programming_heuristic.py  hybrid_a_star.py  map.txt  path.txt  reeds_shepp_path_planning.py  temp.py  temp2.py
Main RaspberryPi ECU/V2I Communications/: tcp_client.cpp  tcp_client.h  v2i_client.cpp  v2i_client.h  wifi_manager.c  wifi_manager.h  wifi_manager_cfg.h
Sensors Hub STM32 ECU/: wolfSSL.I-CUBE-wolfSSL_conf.h
Sensors Hub STM32 ECU/Cfg/: CryptoStackManager_PBcfg.c  CryptoStackManager_cfg.h  can_stm_PBcfg.c  can_stm_cfg.h  gy271_cfg.h  gy521_cfg.h  light_system_cfg.h  ultrasonic_PBcfg.c  ultrasonic_cfg.h
Sensors Hub STM32 ECU/Inc/: Can_Messages_IDs.h  FreeRTOSConfig.h  can_stm.h  gy271.h  gy521.h  light_system.h  main.h  stm32f1xx_it.h  ultrasonic.h
Sensors Hub STM32 ECU/Registers/: gy271_registers.h  gy521_registers.h
Sensors Hub STM32 ECU/Src/: CryptoStackManager.c  can_tp_stm.c  gy271.c  gy521.c  light_system.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  ultrasonic.c
Street Infrastructure ECU/Inc/: FreeRTOSConfig.h  button.h  esp8266.h  main.h  stm32f4xx_it.h  thingspeak_mqtt.h  v2i_server_service_manager.h
Street Infrastructure ECU/RSA_Keys/: Inf2_PrivKey.h  Inf2_PublicKey.h  Valeo_Vehicle_PublicKey.h
Street Infrastructure ECU/Src/: ESP_Mode_Switch.c  SecOC.c  button.c  main.c  mqtt_client.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  thingspeak_mqtt.c  v2i_server_service_manager.c
Street Infrastructure ECU/cfg/: CryptoStackManager_PBcfg.c  CryptoStackManager_cfg.h  button_cfg.h  esp8266_PBcfg.c
Ultrasonic Hub STM32 ECU/Cfg/: CryptoStackManager_PBcfg.c  can_stm_PBcfg.c  can_stm_cfg.h  ultrasonic_PBcfg.c  ultrasonic_cfg.h
Ultrasonic Hub STM32 ECU/Inc/: Can_service_manager.h  (+5 more)
fileToRead/: GarageList.txt  carCurrentLocation.txt  mapPointList.txt  pathPointList.txt
(+6 files in other folders)
